src/testFunctional/testData/org/intellij/xquery/parser/valid/UnaryLookupAsArgument.xq
xquery version "3.0";
let $f := fn:string-join(?test, ', ')
return $f