src/testFunctional/testData/org/intellij/xquery/parser/errors/IncompleteVariableName.xq
xquery version "3.0";

module namespace IncompleteVariableName = "IncompleteVariableName";

declare variable $IncompleteVariableName: := ();
